res/waybar/style.css
* {
  font-size: 20px;
  font-family: monospace;
}

window#waybar {
  background: #292b2e;
  color: #fdf6e3;
}

#custom-right-arrow-dark,
#custom-left-arrow-dark {
  color: #1a1a1a;
}
#custom-right-arrow-light,
#custom-left-arrow-light {
  color: #292b2e;
  background: #1a1a1a;
}

#workspaces,
#clock.1,
#clock.2,
#clock.3,
#pulseaudio,
#memory,
#cpu,
#battery,
#network,
#disk,
#user,
#idle_inhibitor,
#custom-notification,
#custom-weather,
#custom-cpu-governor,
#custom-kde-connect,
#mpris,
#tray {
  background: #1a1a1a;
}

#workspaces button {
  padding: 0 2px;
  color: #fdf6e3;
}
#workspaces button.active {
  color: #268bd2;
}
#workspaces button:hover {
  box-shadow: inherit;
  text-shadow: inherit;
}
#workspaces button:hover {
  background: #1a1a1a;
  border: #1a1a1a;
  padding: 0 3px;
}

#network {
  color: #268bd2;
}
#pulseaudio {
  color: #2aa198;
}
#cpu {
  color: #6c71c4;
}
#battery {
  color: #859900;
}
#battery.warning {
  color: #b58900;
}
#battery.critical {
  color: #dc322f;
}
#battery.charging.critical {
  color: #b58900;
}
#mpris {
  color: greenyellow;
}
#idle_inhibitor {
  color: #7943dc;
}
#custom-notification {
  color: rgb(149, 87, 149);
}
#custom-kde-connect {
    color: rgb(255, 132, 234);
}

#custom-cpu-governor {
    color: rgb(255, 196, 88);
    padding: 0 5px;
}

#tray,
#custom-notification,
#user,
#clock,
#network,
#pulseaudio,
#workspaces,
#memory,
#cpu,
#battery,
#idle_inhibitor,
#custom-weather,
#custom-kde-connect,
#mpris,
#disk {
  padding: 0px 12px;
}

